@@ -7,6 +7,7 @@
 * CyberSource: Add pinless debit card support [JoshMcKin]
 * Verkkomaksut: Add item title field [kaapa]
 * Add MerchantWare V4 gateway [hron]
+* Eway Rapid: Add #store method [adrianmacneil]
 
 == Version 1.34.1 (June 28, 2013)
 
